put miniaudio into the third party folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,3 +91,4 @@ set_target_properties(miniz PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
 set_target_properties(msdf-atlas-gen PROPERTIES FOLDER ${THIRD_PARTY_FOLDER}/msdfgen)
 set_target_properties(msdfgen PROPERTIES FOLDER ${THIRD_PARTY_FOLDER}/msdfgen)
 set_target_properties(OpenFBX PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
+set_target_properties(miniaudio PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
