make the editor depend on the runtime so that it rebuilt when I make changes to it

--- a/Editor/CMakeLists.txt
+++ b/Editor/CMakeLists.txt
@@ -96,3 +96,5 @@ add_custom_command(
 )
 
 set_target_properties(Editor PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
+
+add_dependencies(Editor Runtime)
