--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "Engine/vendor/miniaudio"]
 	path = Engine/vendor/miniaudio
 	url = git@github.com:mackron/miniaudio.git
+[submodule "Engine/vendor/tracy"]
+	path = Engine/vendor/tracy
+	url = git@github.com:wolfpld/tracy.git
