turn wayland off when building glfw

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ set(GLFW_INSTALL OFF CACHE INTERNAL "" )
 set(GLFW_BUILD_DOCS OFF CACHE INTERNAL "")
 set(GLFW_BUILD_TESTS OFF CACHE INTERNAL "")
 set(GLFW_BUILD_EXAMPLES OFF CACHE INTERNAL "")
+set(GLFW_USE_WAYLAND OFF CACHE BOOL "Disable Wayland in GLFW")
 # set(GLFW_LIBRARY_TYPE OFF CACHE INTERNAL "")
 set(tinyxml2_BUILD_TESTING OFF CACHE INTERNAL "")
 set(tinyxml2_INSTALL_CMAKEDIR OFF CACHE INTERNAL "")
