--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,8 @@ set(GLFW_INSTALL OFF CACHE INTERNAL "" )
 set(GLFW_BUILD_DOCS OFF CACHE INTERNAL "")
 set(GLFW_BUILD_TESTS OFF CACHE INTERNAL "")
 set(GLFW_BUILD_EXAMPLES OFF CACHE INTERNAL "")
-set(GLFW_USE_WAYLAND OFF CACHE BOOL "Disable Wayland in GLFW")
+set(GLFW_BUILD_X11 ON CACHE BOOL "" FORCE)
+set(GLFW_BUILD_WAYLAND OFF CACHE BOOL "" FORCE)
 # set(GLFW_LIBRARY_TYPE OFF CACHE INTERNAL "")
 set(tinyxml2_BUILD_TESTING OFF CACHE INTERNAL "")
 set(tinyxml2_INSTALL_CMAKEDIR OFF CACHE INTERNAL "")
