--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "Engine/vendor/tracy"]
 	path = Engine/vendor/tracy
 	url = git@github.com:wolfpld/tracy.git
+[submodule "Engine/vendor/sol"]
+	path = Engine/vendor/sol
+	url = https://github.com/ThePhD/sol2.git
